# DjVu-Viewer

./: .gitmodules  CMakeLists.txt  README.md  config.h.in  djvu-viewer.desktop  djvu-viewer.privileges  harborize.sh  info.you-ra.djvuviewer.desktop  main.cpp
cmake/: sailfish_i486.cmake
djvu/: CMakeLists.txt  djvudocument.cpp  djvudocument.h  djvutocmodel.cpp  djvuviewerdjvuplugin.cpp  djvuviewerdjvuplugin.h  qmldir
models/: dbusconstants.h  documentlistmodel.cpp  trackerdocumentprovider.cpp
plugin/: CMakeLists.txt  DJVUAnnotationEdit.qml  DJVUAnnotationNew.qml  DJVUContextMenuHighlight.qml  DJVUContextMenuLinks.qml  DJVUContextMenuText.qml  DJVUDocumentPage.qml  DJVUDocumentToCPage.qml  DJVUStorage.js  DJVUView.qml  DetailsPage.qml  DocumentFlickable.qml  OverlayToolbar.qml  SearchBarItem.qml  archiveinfo.cpp  archiveinfo.h  djvuviewerplugin.cpp  djvuviewerplugin.h  qmldir  statfileinfo.cpp  statfileinfo.h
qml/: AboutPage.qml  CoverPage.qml  FileListPage.qml  Main.qml  SortTypeSelectionPage.qml
qml/translations/: StoreDescription.qml
rpm/: djvu-viewer.spec
tests/: 00-introduction.txt
